Modify:change les parametre de Google App

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,4 +1,4 @@
 PORT=6000
-SMTP_PASSWORD="yqta wyrn zyfm xfaw"
-SMTP_EMAIL="haruna.rashid.yakubu@gmail.com"
+SMTP_PASSWORD="jsnl spdd shig jlgm"
+SMTP_EMAIL="mbouffewafomelanie@gmail.com@gmail.com"
 JWT_SECRET="your-super-secret-jwt-key-here"
